--- a/casestudies/16/casestudy/www/layout/case_id_16_id_30_c_bio.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_30_c_bio.html
@@ -286,7 +286,7 @@ font-style:italic;
 <p><em>Listen to Stengel talk about the importance of </em>Time'<em>s covers.</em></p>
 <p>
     <!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/Stengel_cover.mp3" class="audiofile" alt="" /-->
-    <audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/Stengel_cover.mp3" type="audio/mpeg"></audio>
+    <audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/Stengel_cover.mp3" type="audio/mpeg"></audio>
 </p>
 <p><strong>Length:</strong> 58 sec</p></div>
       </div>
