--- a/casestudies/17/casestudy/www/layout/case_id_17_id_32_c_bio.html
+++ b/casestudies/17/casestudy/www/layout/case_id_17_id_32_c_bio.html
@@ -247,7 +247,7 @@ font-style:italic;
 <p><em>Listen to Logan's views on online reporting and writing standards.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 59 sec</span><br />
 <!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Logan_bio_clip.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Logan_bio_clip.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Logan_bio_clip.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
