--- a/casestudies/2/casestudy/www/layout/case_id_2_id_17_c_bio.html
+++ b/casestudies/2/casestudy/www/layout/case_id_2_id_17_c_bio.html
@@ -276,7 +276,7 @@ font-style:italic;
 <p><em>Listen to Bomse on his working relationship with the producer.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 53 sec</span><br />
 <!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Bomse_bio_clip.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Bomse_bio_clip.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Bomse_bio_clip.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
