--- a/casestudies/22/casestudy/www/layout/case_id_22_id_67_c_bio.html
+++ b/casestudies/22/casestudy/www/layout/case_id_22_id_67_c_bio.html
@@ -320,7 +320,7 @@ font-style:italic;
 <p><i>Listen to Mitchell on his job:</i><br />
 <span class="footnoteslength"><b>Length:</b> 14 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/mitchell_on_his_job.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/mitchell_on_his_job.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/mitchell_on_his_job.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
