--- a/casestudies/24/casestudy/www/layout/case_id_24_id_73_c_bio.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_73_c_bio.html
@@ -338,7 +338,7 @@ font-style:italic;
 <h3 style="clear: both;">Audio</h3>
 <p><span class="audioprompt"><i>Listen to Scott discuss the challenges of reporters&rsquo; security.</i></span><span class="footnoteslength"><b>Length:</b> 1 min 57 sec</span><br />
 <!-- img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_david_clarkscott.mp3" class="audiofile" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_david_clarkscott.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_david_clarkscott.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
