--- a/casestudies/24/casestudy/www/layout/case_id_24_id_79_c_bio.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_79_c_bio.html
@@ -339,7 +339,7 @@ font-style:italic;
 <h3>Audio</h3>
 <p><span class="audioprompt"><i>Listen to Simon discuss his decision to join CPJ.</i></span><span class="footnoteslength"><b>Length:</b> 33 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_joel_simon.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_joel_simon.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_joel_simon.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
