--- a/casestudies/1/casestudy/www/layout/case_id_1_id_2_c_bio.html
+++ b/casestudies/1/casestudy/www/layout/case_id_1_id_2_c_bio.html
@@ -277,7 +277,7 @@ font-style:italic;
 <p><em>Listen to Plott on how Lee Kuan Yew treats criticism in the press.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 48 sec</span><br />
 <!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Plott%20bio%20clip_lev.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Plott%20bio%20clip_lev.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Plott%20bio%20clip_lev.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
