--- a/casestudies/15/casestudy/www/layout/case_id_15_id_24_c_bio.html
+++ b/casestudies/15/casestudy/www/layout/case_id_15_id_24_c_bio.html
@@ -275,7 +275,7 @@ font-style:italic;
 <p><em>Listen to Smith explain why the </em>Times Union<em> dominated the market.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 23 sec</span><br />
 <!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_june_18_edit.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_june_18_edit.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_june_18_edit.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
