--- a/casestudies/16/casestudy/www/layout/case_id_16_id_27_c_bio.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_27_c_bio.html
@@ -286,7 +286,7 @@ font-style:italic;
 <p><em>Listen to Dykman on statistics and what they say about Americans.</em></p>
 <p>
 <!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/Dykman_stats.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/Dykman_stats.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/Dykman_stats.mp3" type="audio/mpeg"></audio>
 </p>
 <p><strong>Length:</strong> 1 min 4 sec</p></div>
       </div>
