--- a/casestudies/16/casestudy/www/layout/case_id_16_id_28_c_bio.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_28_c_bio.html
@@ -285,7 +285,7 @@ font-style:italic;
 <p><em>Listen to Gibbs talk about the &ldquo;American Mirror.&rdquo;</em></p>
 <p>
 <!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/gibbs_american_mirror.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/gibbs_american_mirror.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timemag/mp3/gibbs_american_mirror.mp3" type="audio/mpeg"></audio>
 </p>
 <p><strong>Length:</strong> 3 min 27 sec</p></div>
       </div>
