--- a/casestudies/17/casestudy/www/layout/case_id_17_id_31_c_bio.html
+++ b/casestudies/17/casestudy/www/layout/case_id_17_id_31_c_bio.html
@@ -248,7 +248,7 @@ font-style:italic;
 <p><em>Listen to Jenner discuss profitability and public service.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 45 sec</span><br />
 <!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Jenner_bio.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Jenner_bio.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Jenner_bio.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
