--- a/casestudies/19/casestudy/www/layout/case_id_19_id_40_c_bio.html
+++ b/casestudies/19/casestudy/www/layout/case_id_19_id_40_c_bio.html
@@ -239,7 +239,7 @@ font-style:italic;
 <p><em>Listen to Jeff Cull describe the early phases of covering the Cape Coral utility expansion.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 57 sec</span><br />
 <!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Jeff%20Cull%20bio.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Jeff%20Cull%20bio.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Jeff%20Cull%20bio.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
