--- a/casestudies/19/casestudy/www/layout/case_id_19_id_42_c_bio.html
+++ b/casestudies/19/casestudy/www/layout/case_id_19_id_42_c_bio.html
@@ -240,7 +240,7 @@ font-style:italic;
 <p><em>Listen to Hudler discuss legal issues surrounding news-press.com forums.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 59 sec</span><br />
 <!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Carol%20Hudler%20bio.mp3" class="audiofile" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Carol%20Hudler%20bio.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Carol%20Hudler%20bio.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
