--- a/casestudies/20/casestudy/www/layout/case_id_20_id_53_c_bio.html
+++ b/casestudies/20/casestudy/www/layout/case_id_20_id_53_c_bio.html
@@ -230,7 +230,7 @@ font-style:italic;
 <p><em>Listen to Don Ruane describe the hazards of publishing reports online first and fast,</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 41 sec</span><br />
 <!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Ruane%20bio.mp3" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Ruane%20bio.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Ruane%20bio.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
