--- a/casestudies/22/casestudy/www/layout/case_id_22_id_63_c_bio.html
+++ b/casestudies/22/casestudy/www/layout/case_id_22_id_63_c_bio.html
@@ -321,7 +321,7 @@ font-style:italic;
 <p><i>Listen to Byford on single sourcing:</i><br />
 <span class="footnoteslength"><b>Length:</b> 18 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/byford_single_sourcing.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/byford_single_sourcing.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/byford_single_sourcing.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
