--- a/casestudies/22/casestudy/www/layout/case_id_22_id_65_c_bio.html
+++ b/casestudies/22/casestudy/www/layout/case_id_22_id_65_c_bio.html
@@ -320,7 +320,7 @@ font-style:italic;
 <p><i>Listen to Gilligan on the role of the Today program:</i><br />
 <span class="footnoteslength"><b>Length:</b> 12 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/gilligan_the_role_of_today.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/gilligan_the_role_of_today.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bbc/gilligan_the_role_of_today.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
