--- a/casestudies/24/casestudy/www/layout/case_id_24_id_71_c_bio.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_71_c_bio.html
@@ -339,7 +339,7 @@ font-style:italic;
 <h3 style="clear: both;">Audio</h3>
 <p><span class="audioprompt"><i>Listen to Cook describe hosting the </i>Monitor<i>&rsquo;s &ldquo;newsmaker&rdquo; breakfasts.</i></span><span class="footnoteslength"><b>Length:</b> 1 min 9 sec</span><br />
 <!-- img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_david_cook.mp3" alt="" /-->
-<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_david_cook.mp3" type="audio/mpeg"></audio>
+<audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/csm/audio/bio_david_cook.mp3" type="audio/mpeg"></audio>
 </p></div>
       </div>
 				</div><!-- id="main" -->
