--- a/casestudies/29/casestudy/www/layout/case_id_29_id_88_c_bio.html
+++ b/casestudies/29/casestudy/www/layout/case_id_29_id_88_c_bio.html
@@ -282,7 +282,7 @@ font-style:italic;
          </span>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/postdispatch/bio_gauen.mp3"/>-->
-         <audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/postdispatch/bio_gauen.mp3" type="audio/mpeg"></audio>
+         <audio controls><source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/postdispatch/bio_gauen.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
