--- a/casestudies/43/casestudy/www/layout/case_id_43_id_125_c_bio.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43_id_125_c_bio.html
@@ -140,7 +140,7 @@ font-style:italic;
           <i>
            Herald
           </i>
-          s' brief history
+          s-brief history
          </a>
         </li>
         <li class="leaf">
@@ -165,7 +165,7 @@ font-style:italic;
         </li>
         <li class="collapsed">
          <a href="case_id_43_id_472.html">
-          Notification' Sept. 7
+          Notification-Sept. 7
          </a>
         </li>
         <li class="leaf">
