--- a/casestudies/124/casestudy/www/layout/case_id_124_id_241_c_bio.html
+++ b/casestudies/124/casestudy/www/layout/case_id_124_id_241_c_bio.html
@@ -204,7 +204,7 @@ font-style:italic;
        </a>
       </div>
       <h1 class="title">
-       Biography: Tatiana Wah
+       Biography: Tatiana Wah
       </h1>
       <div class="node">
        <span class="taxonomy">
@@ -214,7 +214,7 @@ font-style:italic;
          <img src="../../files/photos/822/Tatiana.jpg" style="height: 272px; width: 250px;"/>
         </div>
         <p>
-         Tatiana Wah was director of the Haiti Research and Policy Program in the Center on Globalization and Sustainable Development at Columbia Universitys Earth Institute. She advised the Haitian government on policy aimed at achieving the United Nations Millennium Development Goals.
+         Tatiana Wah was director of the Haiti Research and Policy Program in the Center on Globalization and Sustainable Development at Columbia University's Earth Institute. She advised the Haitian government on policy aimed at achieving the United Nations' Millennium Development Goals.
         </p>
         <p>
          In 2010, Wah was named Director of Strategy and Planning for the Interim Haiti Recovery Commission (IHRC), which organized the country's recovery from the 7.0 magnitude earthquake that devastated Port-au-Prince in January that year.
@@ -245,17 +245,17 @@ font-style:italic;
        <ul class="menu">
         <li class="leaf">
          <a class="active" href="case_id_124_id_241_c_bio.html">
-          Tatiana Wah
+          Tatiana Wah
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_124_id_242_c_bio.html">
-          Marc Levy
+          Marc Levy
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_124_id_243_c_bio.html">
-          Alex Fischer
+          Alex Fischer
          </a>
         </li>
        </ul>
