--- a/casestudies/124/casestudy/www/layout/case_id_124_id_243_c_bio.html
+++ b/casestudies/124/casestudy/www/layout/case_id_124_id_243_c_bio.html
@@ -204,7 +204,7 @@ font-style:italic;
        </a>
       </div>
       <h1 class="title">
-       Biography: Alex Fischer
+       Biography: Alex Fischer
       </h1>
       <div class="node">
        <span class="taxonomy">
@@ -214,7 +214,7 @@ font-style:italic;
          <img src="../../files/photos/820/Alex.jpg" style="width: 250px; height: 252px;"/>
         </div>
         <p>
-         Alex Fischer was associate director of the Haiti Research and Policy Program in the Center on Globalization and Sustainable Development at Columbia Universitys Earth Institute. In this capacity, he served as a technical advisor to the Haitian governments E-Governance Office.
+         Alex Fischer was associate director of the Haiti Research and Policy Program in the Center on Globalization and Sustainable Development at Columbia University's Earth Institute. In this capacity, he served as a technical advisor to the Haitian government's E-Governance Office.
         </p>
         <p>
          <i>
@@ -240,17 +240,17 @@ font-style:italic;
        <ul class="menu">
         <li class="leaf">
          <a href="case_id_124_id_241_c_bio.html">
-          Tatiana Wah
+          Tatiana Wah
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_124_id_242_c_bio.html">
-          Marc Levy
+          Marc Levy
          </a>
         </li>
         <li class="leaf">
          <a class="active" href="case_id_124_id_243_c_bio.html">
-          Alex Fischer
+          Alex Fischer
          </a>
         </li>
        </ul>
