--- a/casestudies/115/casestudy/www/layout/case_id_115_id_232_c_bio.html
+++ b/casestudies/115/casestudy/www/layout/case_id_115_id_232_c_bio.html
@@ -2,7 +2,7 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   Biography: Sacha Pfeiffer | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Católica
+   Biography: Sacha Pfeiffer | Reportear una Verdad Explosiva: Boston Globe y los Abusos Sexuales  en la Iglesia Cat&oacute;lica
   </title>
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
@@ -132,12 +132,12 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_812.html">
-          Introducción
+          Introducci&oacute;n
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_115_id_813.html">
-          Boston GlobeÂ— una breve historia
+          Boston Globe&mdash; una breve historia
          </a>
         </li>
         <li class="leaf">
@@ -147,7 +147,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_815.html">
-          Nace una investigación
+          Nace una investigaci&oacute;n
          </a>
         </li>
         <li class="leaf">
@@ -162,7 +162,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_818.html">
-          La Â“ciudad más católicaÂ”
+          La "ciudad m&aacute;s cat&oacute;lica"
          </a>
         </li>
         <li class="leaf">
@@ -177,7 +177,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_821.html">
-          El Globe y los católicos de Boston
+          El Globe y los cat&oacute;licos de Boston
          </a>
         </li>
         <li class="leaf">
@@ -212,7 +212,7 @@ font-style:italic;
         </li>
         <li class="leaf">
          <a href="case_id_115_id_828.html">
-          Potencial reacción
+          Potencial reacci&oacute;n
          </a>
         </li>
         <li class="leaf">
@@ -235,7 +235,7 @@ font-style:italic;
        <div class="content">
         <ul class="menu">
          <li class="printpdf">
-          <a href="../../files/global/115/Boston Globe y los Abusos Sexuales  en la Iglesia Católica_wm .pdf" target="_blank">
+          <a href="../../files/global/115/Boston Globe y los Abusos Sexuales  en la Iglesia Cat&oacute;lica_wm .pdf" target="_blank">
            Download this case as a PDF
           </a>
          </li>
@@ -254,7 +254,7 @@ font-style:italic;
        </a>
       </div>
       <h1 class="title">
-       Biography: Sacha Pfeiffer
+       Biography: Sacha Pfeiffer
       </h1>
       <div class="node">
        <span class="taxonomy">
@@ -326,27 +326,27 @@ font-style:italic;
        <ul class="menu">
         <li class="leaf">
          <a href="case_id_115_id_230_c_bio.html">
-          Walter Robison
+          Walter Robison
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_115_id_231_c_bio.html">
-          Michael Rezendes
+          Michael Rezendes
          </a>
         </li>
         <li class="leaf">
          <a class="active" href="case_id_115_id_232_c_bio.html">
-          Sacha Pfeiffer
+          Sacha Pfeiffer
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_115_id_233_c_bio.html">
-          Martin Baron
+          Martin Baron
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_115_id_234_c_bio.html">
-          Ben  Bradlee, Jr.
+          Ben  Bradlee, Jr.
          </a>
         </li>
        </ul>
